--- a/README.rdoc
+++ b/README.rdoc
@@ -3,12 +3,21 @@
 This library is not meant for production use. It is based on a snippet on
 RubyForge and was packaged as gem to make it easily available.
 
-Source: http://rubyforge.org/snippet/detail.php?type=snippet&id=117
-
-
 You may use this class, to programmatically set up a quick and simple reverse
 proxy. I found it useful to implement advanced inspection of an HTTP
 communication between an uncontrolled client and server.
 
+== Documentation
 
 See WEBrick::HTTPReverseProxyServer for more information.
+
+
+== License
+
+The code was originally released in 2006 by Richard Kernahan on Rubyforge.
+
+  http://rubyforge.org/snippet/detail.php?type=snippet&id=117
+
+It was packaged as RubyGem by Gregor Schmidt.
+
+The code is release under the terms of the Artistic License.
